--- a/src/components/loginRegis/loginRegis.css
+++ b/src/components/loginRegis/loginRegis.css
@@ -2,6 +2,9 @@
   background-color: #8ecae6;
   height: 100vh;
 }
+.yau-form h1 {
+  text-align: center;
+}
 
 .container-login {
   background-color: white;
@@ -19,4 +22,29 @@
 }
 .imgLogin {
   width: 50rem;
+}
+.yau-form-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.8rem;
+}
+.yau-form-flex input,
+select {
+  min-width: 23rem;
+  border: none;
+  background: transparent;
+  outline: none;
+  margin-left: 1.3rem;
+}
+
+.yau-form-flex div {
+  background-color: white;
+  padding: 0.5rem;
+  min-width: 28rem;
+  border-radius: 0.5rem;
+}
+.FontAwesomeIcon1 {
+  color: skyblue;
+  margin-left: 0.3rem;
 }
