--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -1,3 +1,55 @@
-body{
+
+*{
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  
+}
+
+.main{ 
     
+    width: 80%;
+    float: left;
+    max-width: 100%;
+    border-radius: 10px black solid;
+    
+  }
+  
+.padding{
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 90px 90px 90px;
+    grid-template-rows: 160px 160px;
+    float: right;
+    margin-top: 20px;
+    margin-bottom: 25px;
+   
+ 
+   
+    }
+  
+.imagen {
+
+  width: 180px;
+  margin: 18px;
+  text-align: center;
+  line-height: 80px;
+  font-size: 50px;
+  border-bottom: 50px;
+  height: 180px;
+
+}
+.nombre{ 
+    text-align: center;
+}
+.button-btn {
+   
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
