--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -9,14 +9,36 @@
   background-color: #d6e8ee;
 } */
 
+.container-page {
+  max-width: 120rem;
+  width: 85%;
+  margin: 0 auto;
+}
+.jul_flex_product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: beige;
+  border-radius: 20px;
+  width: 25rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+}
+.jul_grid-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  gap: 2rem;
+}
+/* 
 .main {
-  width: 80%;
   float: left;
   max-width: 100%;
   border-radius: 10px black solid;
-}
+} */
 
-.padding {
+/* .padding {
   text-align: center;
   grid-template-columns: 90px 90px 90px;
   grid-template-rows: 160px 160px;
@@ -24,7 +46,7 @@
   margin-top: 20px;
   margin-bottom: 25px;
   height: 500px;
-}
+} */
 
 .imagen {
   width: 250px;
@@ -39,11 +61,11 @@
   -webkit-transition: all 1s ease;
 }
 
-.imagen:hover {
+/* .imagen:hover {
   height: 280px;
   width: 300px;
   margin-left: +50px;
-}
+} */
 
 .nombre {
   text-align: center;
