--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -19,9 +19,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: beige;
+  background-color: rgb(218 153 108 / 51%);
   border-radius: 20px;
-  width: 25rem;
+  width: 300px;
+  padding-bottom: 28px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
 .jul_grid-cards {
