--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -21,12 +21,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
- background-color:#1790ff3b;
+  background-color:#F7F8F3;
   border-radius: 20px;
   width: 300px;
   padding-bottom: 28px;
   transition: all 0.2s ease-in-out;
- 
+  border: 5px solid #002c3e;
 }
 .jul_grid-cards {
   display: grid;
@@ -87,8 +87,6 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
- 
-
 }
 
 h4 {
@@ -102,18 +100,32 @@ h4 {
 a {
   text-decoration: blink;
   display: block;
+  color: #002c3e;
+
 }
 
 h3{
   color: white;
   font-family: "Roboto";
-
   border-radius:5px 10x 20px 15px;
   
- 
-
-  
 }
+
+
+
+.btn-primary {
+  background-color: #002c3e;
+  border-radius: 7px;
+  margin-top: 5px;
+}
+.btn-primary h2{
+  color: #F7F8F3;
+  margin: 0px;
+  padding: 3px;
+}
+
+
+
 /* html {
   box-sizing: border-box;
   font-size: 90%;
