--- a/src/view/detailsProduct/detailsProduct.css
+++ b/src/view/detailsProduct/detailsProduct.css
@@ -6,7 +6,7 @@
     font-size: 150%;
     padding: 5px 30px;
     background: linear-gradient(-120deg, white 50%, #002c3e 50%);
-    height: 100vh;
+    height: 100%;
 }
 
 h4{
