--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -27,6 +27,7 @@
   padding-bottom: 28px;
   transition: all 0.2s ease-in-out;
   border: 5px solid #002c3e;
+  height: 492px;
 }
 .jul_grid-cards {
   display: grid;
@@ -78,6 +79,7 @@
 
 .nombre {
   text-align: center;
+  color: black;
 }
 .button-btn {
   border: none;
@@ -89,10 +91,12 @@
   font-size: 16px;
 }
 
-h4 {
+#nombreProducto {
   width: 250px;
   margin: 10px;
   font-family: "Roboto";
+  color: black;
+
  
 
 }
@@ -105,7 +109,7 @@ a {
 }
 
 h3{
-  color: white;
+  color: black;
   font-family: "Roboto";
   border-radius:5px 10x 20px 15px;
   
@@ -131,3 +135,16 @@ h3{
   font-size: 90%;
   font-family: 'Comfortaa';
 } */
+#input-product{
+  text-align: center;
+  margin-top: 4px;
+  padding: 2px;
+  border-radius: 7px;
+  content: '✓';
+
+}
+#input-product:valid+span:after {
+  position: absolute;
+  content: '✓';
+  padding-left: 5px;
+}
