--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -13,7 +13,7 @@ padding: 0rem 9%;
     padding: 0;
 }
 
-.btn
+.home-btn
 {
     margin-top: 1rem;
     display: inline-block;
@@ -25,7 +25,7 @@ padding: 0rem 9%;
     padding: 1rem 3rem;
     text-decoration: none;
 }
-.btn:hover
+.home-btn:hover
 {
     background: black;
     color: white;
@@ -43,7 +43,7 @@ padding: 0rem 9%;
 
 .box .content
 {
-    width: 30rem;
+    width: 50rem;
 }
 
 .box .content span{
