--- a/src/view/product/product.css
+++ b/src/view/product/product.css
@@ -8,7 +8,11 @@
   margin: 50px;
   background-color: #d6e8ee;
 } */
+#root
+{
+  padding-top: 51px;
 
+}
 .container-page {
   max-width: 120rem;
   width: 85%;
